sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Schedule__c/Asset_Maintenance_Schedule__c.object-meta.xml
<CustomObject>
    <label>Asset Maintenance Schedule</label>
    <nameField>
        <label>Asset Maintenance Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Maintenance Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>