sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Schedule__c/fields/Checkpoint__c.field-meta.xml
<CustomField>
    <fullName>Checkpoint__c</fullName>
    <label>Checkpoint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Operation</fullName>
            </value>
            <value>
                <fullName>During Operation</fullName>
            </value>
            <value>
                <fullName>After Operation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>