sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Schedule__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Asset Maintenance Schedules</relationshipLabel>
    <relationshipName>Asset_Maintenance_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>