sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Schedule__c/fields/global_price__c.field-meta.xml
<CustomField>
    <fullName>global_price__c</fullName>
    <description>Overall cost of the Asset Maintenance derived from rollup of all task costs</description>
    <label>global price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>