sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Schedule__c/fields/Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Type__c</fullName>
    <label>Maintenance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BM(Break Down Maintenance)</fullName>
            </value>
            <value>
                <fullName>AM(Autonomous Maintenance)</fullName>
            </value>
            <value>
                <fullName>PM(Preventive Maintenance)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>