sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Schedule__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>