sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Schedule__c/fields/Sanergy_Asset__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sanergy Asset</label>
    <referenceTo>Sanergy_Asset__c</referenceTo>
    <relationshipLabel>Asset Maintenance Schedules</relationshipLabel>
    <relationshipName>Asset_Maintenance_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>