sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Schedule__c/fields/Tool__c.field-meta.xml
<CustomField>
    <fullName>Tool__c</fullName>
    <label>Tool</label>
    <length>30</length>
    <type>Text</type>
</CustomField>