sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Schedule__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Asset_Maintenance_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>