sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Schedule__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Maintenance Schedules</relationshipLabel>
    <relationshipName>Asset_Maintenance_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>