sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Schedule__c/recordTypes/Asset_Maintenance_Schedule.recordType-meta.xml
<RecordType>
    <fullName>Asset_Maintenance_Schedule</fullName>
    <active>false</active>
    <label>Asset Maintenance Schedule</label>
</RecordType>