sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Checkpoint__c</columns>
    <columns>Date__c</columns>
    <columns>Frequency__c</columns>
    <columns>Maintenance_Type__c</columns>
    <columns>Sanergy_Asset__c</columns>
    <columns>Status__c</columns>
    <columns>Task_Name__c</columns>
    <columns>Tool__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>